Changed slightly the example output of javac_params